Fix unwanted title line breaks in certain languages

--- a/src/ui-core/styles/layouts.module.scss
+++ b/src/ui-core/styles/layouts.module.scss
@@ -22,6 +22,7 @@
 	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+	white-space: nowrap;
 	grid-area: page-title;
 }
 .content {
@@ -42,10 +43,10 @@
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-areas:
-				"page-title"
-				"tabs"
-				"content"
-				"back-button";
+			"page-title"
+			"tabs"
+			"content"
+			"back-button";
 		grid-template-rows: auto auto 1fr auto;
 	}
 
